console: Fix cell alignment

--- a/pkg/webui/console/containers/top-entities-dashboard-panel/top-entities-panel.styl
+++ b/pkg/webui/console/containers/top-entities-dashboard-panel/top-entities-panel.styl
@@ -40,8 +40,8 @@
     &.last-row
       margin-bottom: 56px
   &-cell
-    min-width: 33%
-    &-extended
-      min-width: 100%
+    min-width: 100%
+    &-divided
+      width: 33%
     &-small
-      min-width: 2.5rem
+      width: 2.5rem
